--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
+    "case-sensitive-paths-webpack-plugin": "^2.3.0",
     "eslint": "^7.15.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
