--- a/package.json
+++ b/package.json
@@ -11,17 +11,21 @@
     "@material-ui/core": "^4.11.2",
     "@material-ui/data-grid": "^4.0.0-alpha.12",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "firebase": "^8.1.2",
+    "moment": "^2.29.1",
     "next": "10.0.0",
     "next-redux-wrapper": "^6.0.2",
     "notistack": "^1.0.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-moment": "^1.0.0",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "use-debounce": "^5.2.0"
   },
   "devDependencies": {
     "case-sensitive-paths-webpack-plugin": "^2.3.0",
